--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -218,6 +218,10 @@ head
         margin:10px;
         border-radius:30px;
       }
+      .flick:hover {
+        cursor:pointer;
+        background-color:rgba(0,0,0,0.2);
+      }
   body
     script.
       if(screen.width < 414){
@@ -323,7 +327,7 @@ head
                {
                 popbookclass='alreadyb';
                }
-               var popinsert = "<div class='row' onclick='openmodpanel("+element.bid+")' id='book"+element.bid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+popbookclass+"'>"+element.booktitle;
+               var popinsert = "<div class='row flick' onclick='openmodpanel("+element.bid+")' id='book"+element.bid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+popbookclass+"'>"+element.booktitle;
                if(element.star===1&&element.newbook===0){
                  popinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
                }
