--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -246,7 +246,7 @@ head
         .col-xs-6(id='books' style='background-color:#52CA8F;height:100%;overflow:auto;')
           .row
             .col-xs-12(style='text-align:center;')
-              h1(id='bookfigures' style='font-family:high;font-size:200px;font-weight:bold;color:white;')
+              h1(id='booksfigures' style='font-family:high;font-size:200px;font-weight:bold;color:white;')
               button(class='btn btn-default addbookbutton' style='border-radius:30px;margin-bottom:20px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);' type='button') Добавить книгу
           .row.adding(id='addbook' style='display:none;padding-top:20px;')
             .col-xs-12
@@ -281,7 +281,7 @@ head
         .col-xs-6(id='movies' style='background-color:#FAB142;height:100%;overflow:auto;')
           .row
             .col-xs-12(style='text-align:center;')
-              h1(id='moviefigures' style='font-family:high;font-size:200px;font-weight:bold;color:white;') #{newmovies} 
+              h1(id='moviesfigures' style='font-family:high;font-size:200px;font-weight:bold;color:white;') #{newmovies} 
                span(class='alreadym') | #{seenmovies}
               button(class='btn btn-default addmoviebutton' style='border-radius:30px;margin-bottom:20px;border:0px;background-color:rgba(255, 255, 255, 0.38);color:white;' type='button') Добавить фильм
            .row.adding(id='addmovie' style='display:none;padding-top:20px;')
