--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -319,7 +319,7 @@ head
       script.
        var readbooks = #{readbooks};
         var newbooks = #{newbooks};
-        $('#booksfigures').text(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
+        $('#booksfigures').append(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
         var books = !{books};
         var movies = !{movies};
         books.forEach(function(element,index,array){
