--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -438,6 +438,7 @@ head
         allowsubmit=1;
         }
         else {
+          var bid = parsed.bid;
           $('#addbook').slideToggle();
          $('#author').val('');
           $('#booktitle').val('');
