--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -471,7 +471,7 @@ head
         }
         else {
           readbooks++;
-          $('#booksfigures')empty().append(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
+          $('#booksfigures').empty().append(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
         }
         insert+="</h4>";
         $(insert).prependTo('#bookinsert').hide().slideDown();
