--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -346,7 +346,7 @@ head
         function openmodpanel(bid) {
           //$('.modpanel').css('display','none');
           // other opened panels should close when opening new one
-         eval("$('#modbookrow"+bid+"').slideToggle();");
+         eval("$('#modbook"+bid+"').slideToggle();");
         }
         $('.addbookbutton').click(function(){
           if($('#addmovie').css('display') === 'block')
