--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -337,7 +337,7 @@ head
                  popinsert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
                }
                popinsert+="</h4></div></div><div class='row modpanel' id='modbook"+element.bid+"' style='text-alig:center;display:none;background-color:#333;'><div class='col-xs-12'>";
-               if(newbook){
+               if(element.newbook){
                 popinsert+="<button class='btn btn-primary' onclick='modify(0,"+element.bid+")' type='button'>Прочитана</button>";
                }
                popinsert+="<button class='btn btn-danger' onclick='modify(1,"+element.bid+")' type='button'>Удалить</button></div</div>";
