--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -383,6 +383,10 @@ head
                         break;
                       }
         };
+        function openmodpanel(bid) {
+          $('.modpanel').slideToggle();
+         eval("$('#modbookrow"+bid+"').slideToggle();");
+        }
         var allowsubmit = 1;
         function booksubmit() {
         if(!allowsubmit) {
@@ -425,9 +429,9 @@ head
         request.onreadystatechange = function () {
         var DONE = this.DONE || 4;
         if (this.readyState === DONE){
-        var index;
         parsed = JSON.parse(request.responseText);
         console.log(parsed);
+        var bid = parsed.bid;
         if(parsed.trouble === 1)
         {
         console.log('TROUBLE === 1');
@@ -442,19 +446,25 @@ head
           $("#checkbox").prop("star", false);
           $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
-        if(newbook===1)
+        if(newbook===0)
         {
          bookclass='alreadyb';
         }
-        var insert = "<h4 class='"+bookclass+"' style='color:white;'>"+booktitle;
-        if(star===1&&newbook===0){
-          insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
-        }
-        if(attention===1&&newbook===1){
-          insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
-        }
-        $('#welcome').fadeOut();
-        $('#booksrow').slideToggle();
+        var insert = "<class='row' onclick='openmodpanel("+bid+")' id='book"+bid+"'><div class='col-xs-12'><h4 class='"+bookclass+"'>"+booktitle;
+               if(star===1&&newbook===0){
+                 insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
+               }
+               if(attention===1&&newbook===1){
+                 insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+               }
+               insert+="</h4></div></div><div class='row modpanel' id='modbook"+bid+"' style='text-alig:center;display:none;background-color:#333;'><div class='col-xs-12'>";
+               if(newbook){
+                insert+="<button class='btn btn-primary' type='button'>Прочитана</button>";
+               }
+               insert+="<button class='btn btn-danger' type='button'>Удалить</button></div</div>";
+               $('#bookinsert').prepend(insert);
+        //$('#welcome').fadeOut();
+        //$('#booksrow').slideToggle();
         if(newbook===1)
         {newbooks++;
         $('#booksfigures').empty().text(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
@@ -462,7 +472,6 @@ head
         else {
           readbooks++;
           $('#booksfigures').text(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
-
         }
         insert+="</h4>";
         $(insert).prependTo('#bookinsert').hide().slideDown();
@@ -479,5 +488,50 @@ head
         request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook="+newbook);
         }
         $('#booksubmitbutton').click(booksubmit);
+        // modify function
+        var allowmod = 1;
+        function modify(rem,bid) {
+         if (!allowmod) {
+          return;
+         }
+        allowmod = 0;
+        request = new XMLHttpRequest();
+        request.onreadystatechange = function () {
+        var DONE = this.DONE || 4;
+        if (this.readyState === DONE){
+        var index;
+        parsed = JSON.parse(request.responseText);
+        console.log(parsed);
+        if(parsed.trouble === 1)
+        {
+        console.log('TROUBLE === 1');
+        switch (parsed.mtext){
+        case('db'):
+        alert('Проблема с базой данных, повторите позднее');
+        allowmod = 1;
+        break;
+        }}
+        else {
+         if(rem) {
+           if (eval("$('#modbook"+bid+"').css('display')") === 'block' )
+         {eval("$('#modbook"+bid+"').slideToggle('400',function(){$('#modbook"+bid+"').remove();})");}
+         
+         eval("$('#book"+bid+"').fadeOut('400',function(){$('#book"+bid+"').remove();});");
+         }
+         else {
+          if (eval("$('#modbook"+bid+"').css('display')") === 'block' )
+         {eval("$('#modbook"+bid+"').slideToggle();");}
+           eval("$('#readbutton"+bid+"').remove();");
+           eval("$('#heading"+bid+"').removeClass('yet').addClass('alreadyb');");
+         }
+        }
+        }
+        };
+        request.open('POST', '/modbook', true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        //Most libraries like jQuery/Prototype/Dojo do this
+        request.send("rem="+rem+"&uid=#{uid}&bid="+bid);
+        }
         
       
