--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -451,7 +451,7 @@ head
         {
          bookclass='alreadyb';
         }
-        var insert = "<class='row' onclick='openmodpanel("+bid+")' id='book"+bid+"'><div class='col-xs-12'><h4 class='"+bookclass+"'>"+booktitle;
+        var insert = "<class='row' onclick='openmodpanel("+bid+")' id='book"+bid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+bookclass+"'>"+booktitle;
                if(star===1&&newbook===0){
                  insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
                }
