--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -562,6 +562,7 @@ head
            readbooks++;
          $('#booksfigures').empty().append(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
          }
+         allowmod=1;
         }
         }
         };
