--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -484,7 +484,7 @@ head
                if(attention===1&&newbook===1){
                  insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
                }
-               insert+="</h4></div></div><div class='row modpanel' id='modbook"+bid+"' style='text-aling:center;display:none;background-color:#333;'><div class='col-xs-12'>";
+               insert+="</h4></div></div><div class='row modpanel' id='modbook"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newbook){
                 insert+="<button class='btn btn-primary' type='button'>Прочитана</button>";
                }
