--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -500,9 +500,9 @@ head
                }
                insert+="</h4></div></div><div class='row modpanel' id='modbook"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newbook){
-                insert+="<button class='btn btn-primary' type='button'>Прочитана</button>";
+                insert+="<button class='btn btn-primary' id='readbutton"+mid+"' onclick='modify(0,"+bid+")' type='button'>Прочитана</button>";
                }
-               insert+="<button class='btn btn-danger' type='button'>Удалить</button></div</div>";
+               insert+="<button class='btn btn-danger' onclick='modify(1,"+bid+")' type='button'>Удалить</button></div</div>";
                //$('#bookinsert').prepend(insert);
         //$('#welcome').fadeOut();
         //$('#booksrow').slideToggle();
@@ -640,7 +640,7 @@ head
         allowsubmit=1;
         }
         else {
-          var bid = parsed.bid;
+          var mid = parsed.mid;
           $('#addmovie').slideToggle();
          $('#year').val('');
           $('#movietitle').val('');
@@ -652,28 +652,28 @@ head
         {
          movieclass='alreadym';
         }
-        var insert = "<div class='row' onclick='openmodpanel("+bid+")' id='movie"+bid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+movieclass+"'>"+movietitle+" <small> "+year+" </small>";
+        var insert = "<div class='row' onclick='openmodpanel("+mid+")' id='movie"+mid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+movieclass+"'>"+movietitle+" <small> "+year+" </small>";
                if(moviestar===1&&newmovie===0){
                  insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-moviestar'></span>";
                }
                if(movieattention===1&&newmovie===1){
                  insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
                }
-               insert+="</h4></div></div><div class='row modpanel' id='modmovie"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
+               insert+="</h4></div></div><div class='row modpanel' id='modmovie"+mid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newmovie){
-                insert+="<button class='btn btn-primary' type='button'>Прочитана</button>";
+                insert+="<button class='btn btn-primary' id='watchbutton"+mid+"' onclick='modifymovie(0,"+mid+")' type='button'>Просмотрен</button>";
                }
-               insert+="<button class='btn btn-danger' type='button'>Удалить</button></div</div>";
+               insert+="<button class='btn btn-danger' onclick='modifymovie(1,"+mid+")' type='button'>Удалить</button></div</div>";
                //$('#movieinsert').prepend(insert);
         //$('#welcome').fadeOut();
         //$('#moviesrow').slideToggle();
         if(newmovie===1)
         {newmovies++;
-        $('#moviesfigures').empty().append(" "+newmovies+" <span class='alreadym'> | "+readmovies+"</span>");
+        $('#moviesfigures').empty().append(" "+newmovies+" <span class='alreadym'> | "+seenmovies+"</span>");
         }
         else {
-          readmovies++;
-          $('#moviesfigures').empty().append(" "+newmovies+" <span class='alreadym'> | "+readmovies+"</span>");
+          seenmovies++;
+          $('#moviesfigures').empty().append(" "+newmovies+" <span class='alreadym'> | "+seenmovies+"</span>");
         }
         $(insert).prependTo('#movieinsert').hide().slideDown();
         allowsubmit=1;
@@ -690,5 +690,63 @@ head
         }
         //End of movie submit mechanics
         $('#moviesubmitbutton').click(moviesubmit);
-        
+        // Function for removing or changing the status of the movie
+        var allowmod = 1;
+        function modifymovie(rem,mid) {
+         if (!allowmod) {
+          return;
+         }
+        allowmod = 0;
+        request = new XMLHttpRequest();
+        request.onreadystatechange = function () {
+        var DONE = this.DONE || 4;
+        if (this.readyState === DONE){
+        var index;
+        parsed = JSON.parse(request.responseText);
+        console.log(parsed);
+        if(parsed.trouble === 1)
+        {
+        console.log('TROUBLE === 1');
+        switch (parsed.mtext){
+        case('db'):
+        alert('Проблема с базой данных, повторите позднее');
+        allowmod = 1;
+        break;
+        }}
+        else {
+          var moviestatus = parseInt(parsed.moviestatus);
+          console.log('moviestatus:'+moviestatus);
+         if(rem) {
+           if (eval("$('#modmovie"+mid+"').css('display')") === 'block' )
+         {eval("$('#modmovie"+mid+"').slideToggle('400',function(){$('#modmovie"+mid+"').remove();})");} 
+          eval("$('#movie"+mid+"').fadeOut('400',function(){$('#movie"+mid+"').remove();});");
+          if(moviestatus===1)
+        {newmovies--;
+        $('#moviesfigures').empty().append(" "+newmovies+" <span class='alreadym'> | "+seenmovies+"</span>");
+        }
+        else {
+          seenmovies--;
+          $('#moviesfigures').empty().append(" "+newmovies+" <span class='alreadym'> | "+seenmovies+"</span>");
+        }
+         }
+         else {
+          if (eval("$('#modmovie"+mid+"').css('display')") === 'block' )
+         {eval("$('#modmovie"+mid+"').slideToggle();");}
+           eval("$('#watchbutton"+mid+"').remove();");
+           eval("$('#heading"+mid+"').removeClass('yet').addClass('alreadym');");
+           newmovies--;
+           seenmovies++;
+         $('#moviesfigures').empty().append(" "+newmovies+" <span class='alreadym'> | "+seenmovies+"</span>");
+         }
+         allowmod=1;
+        }
+        }
+        };
+        request.open('POST', '/modmovie', true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        //Most libraries like jQuery/Prototype/Dojo do this
+        request.send("rem="+rem+"&uid=#{uid}&mid="+mid);
+        }
+        //End of remove/change status of the movie function
       
