--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -27,7 +27,7 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-color:#009DC2;
+      background-color:#333;
       }
       .navbar-nav {
        float: right;
@@ -192,7 +192,7 @@ head
       -moz-opacity:0.3;
       }
       .alreadym{
-      color:rgba(255, 255, 255, 0.3);
+      color:rgba(0,0,0,0.2);
       -moz-opacity:0.3;
       }
       .leftPaddingExtended{
@@ -519,18 +519,19 @@ head
         {
          bookclass='alreadyb';
         }
-        var insert = "<div class='row' onclick='openmodpanel("+bid+")' id='book"+bid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+bookclass+"'>"+booktitle+" <small> "+author+" </small>";
+        var visibleinsert = "<div class='row' onclick='openmodpanel("+bid+")' id='book"+bid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+bookclass+"'>"+booktitle+" <small> "+author+" </small>";
                if(star===1&&newbook===0){
-                 insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
+                 visibleinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
                }
                if(attention===1&&newbook===1){
-                 insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+                 visibleinsert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
                }
-               insert+="</h4></div></div><div class='row modpanel' id='modbook"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
+               visibleinsert+="</h4></div></div>";
+               var = hiddeninsert"<div class='row modpanel' id='modbook"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newbook){
-                insert+="<button class='btn btn-primary' id='readbutton"+mid+"' onclick='modify(0,"+bid+")' type='button'>Прочитана</button>";
+                hiddeninsert+="<button class='btn btn-primary' id='readbutton"+mid+"' onclick='modify(0,"+bid+")' type='button'>Прочитана</button>";
                }
-               insert+="<button class='btn btn-danger' onclick='modify(1,"+bid+")' type='button'>Удалить</button></div</div>";
+               hiddeninsert+="<button class='btn btn-danger' onclick='modify(1,"+bid+")' type='button'>Удалить</button></div</div>";
                //$('#bookinsert').prepend(insert);
         //$('#welcome').fadeOut();
         //$('#booksrow').slideToggle();
@@ -542,6 +543,7 @@ head
           readbooks++;
           $('#booksfigures').empty().append(" "+newbooks+" <span class='alreadyb'> | "+readbooks+"</span>");
         }
+        $(hiddeninsert).prependTo('#bookinsert');
         $(insert).prependTo('#bookinsert').hide().slideDown();
         allowsubmit=1;
         //window.location = 'http://m.peopleandbooks.com';
