--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -527,7 +527,7 @@ head
                  visibleinsert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
                }
                visibleinsert+="</h4></div></div>";
-               var = hiddeninsert"<div class='row modpanel' id='modbook"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
+               var hiddeninsert="<div class='row modpanel' id='modbook"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newbook){
                 hiddeninsert+="<button class='btn btn-primary' id='readbutton"+mid+"' onclick='modify(0,"+bid+")' type='button'>Прочитана</button>";
                }
@@ -682,14 +682,15 @@ head
         {
          movieclass='alreadym';
         }
-        var insert = "<div class='row' onclick='openmodpanel("+mid+")' id='movie"+mid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+movieclass+"'>"+movietitle+" <small> "+year+" </small>";
+        var visibleinsert = "<div class='row' onclick='openmodpanel("+mid+")' id='movie"+mid+"'><div class='col-xs-12'><h4 style='margin-left:40px;' class='"+movieclass+"'>"+movietitle+" <small> "+year+" </small>";
                if(moviestar===1&&newmovie===0){
-                 insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-moviestar'></span>";
+                 visibleinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-moviestar'></span>";
                }
                if(movieattention===1&&newmovie===1){
-                 insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+                 visibleinsert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
                }
-               insert+="</h4></div></div><div class='row modpanel' id='modmovie"+mid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
+                visibleinsert+="</h4></div></div>";
+                var hiddeninsert =" <div class='row modpanel' id='modmovie"+mid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newmovie){
                 insert+="<button class='btn btn-primary' id='watchbutton"+mid+"' onclick='modifymovie(0,"+mid+")' type='button'>Просмотрен</button>";
                }
