--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -673,9 +673,9 @@ head
                 visibleinsert+="</h4></div></div>";
                 var hiddeninsert =" <div class='row modpanel' id='modmovie"+mid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newmovie){
-                insert+="<button class='btn btn-primary' id='watchbutton"+mid+"' onclick='modifymovie(0,"+mid+")' type='button'>Просмотрен</button>";
+                hiddeninsert+="<button class='btn btn-primary' id='watchbutton"+mid+"' onclick='modifymovie(0,"+mid+")' type='button'>Просмотрен</button>";
                }
-               insert+="<button class='btn btn-danger' onclick='modifymovie(1,"+mid+")' type='button'>Удалить</button></div</div>";
+               hiddeninsert+="<button class='btn btn-danger' onclick='modifymovie(1,"+mid+")' type='button'>Удалить</button></div</div>";
                //$('#movieinsert').prepend(insert);
         //$('#welcome').fadeOut();
         //$('#moviesrow').slideToggle();
